--- a/views/post.ejs
+++ b/views/post.ejs
@@ -3,4 +3,9 @@
     <h1><%= title %></h1>
     <p><%= article %></p>
 
+    <div class="container-fluid">
+        <form action="/" method="post">
+            <button class="btn btn-primary" type="submit" >Back</button>
+        </form>
+    </div>
 <%- include("partials/footer"); -%>
