--- a/views/post.ejs
+++ b/views/post.ejs
@@ -4,7 +4,7 @@
     <p><%= article %></p>
 
     <div class="container-fluid">
-        <form action="/" method="post">
+        <form action="/post" method="post">
             <button class="btn btn-primary" type="submit" >Back</button>
         </form>
     </div>
