name change home to index

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,7 @@
     margin-bottom: 0;
     font-size: 12px;
     letter-spacing: 5px;
+    display: block;
 }
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
